<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    >
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preference"
        android:textSize="30sp"
        />
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie"
        android:textSize="20sp"
        android:layout_below="@+id/text1" />
    <EditText
        android:id="@+id/movie_name"
        android:layout_below="@+id/text2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:textSize="20sp"
        android:hint="@string/pref_movie"
        />
    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv"
        android:textSize="20sp"
        android:layout_below="@id/movie_name"
        />
    <EditText
        android:id="@+id/tv_name"
        android:layout_below="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="20sp"
        android:hint="@string/pref_tv"
        />
    <Button
        android:id="@+id/button_id"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="30sp"
        android:text="@string/send"
        android:onClick="sendMessage"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
